Bug #12983 aix52: Problem compiling my_alloc.c
Submitted: 5 Sep 2005 9:00 Modified: 7 Sep 2005 6:59
Reporter: Magnus Blåudd Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server: Compiling Severity:S3 (Non-critical)
Version: OS:IBM AIX (aix52*)
Assigned to: Magnus Blåudd CPU Architecture:Any

[5 Sep 2005 9:00] Magnus Blåudd
Description:
02840: xlc_r -DDEFAULT_BASEDIR=\"/usr/local/mysql\" -DDATADIR="\"/usr/local/mysql/data\"" -DDEFAULT_CHARSET_HOME="\"/usr/local/mysql\"" -DSHAREDIR="\"/usr/local/mysql/share/mysql\"" -DDEFAULT_HOME_ENV=MYSQL_HOME -DDEFAULT_GROUP_SUFFIX_ENV=MYSQL_GROUP_SUFFIX -DHAVE_CONFIG_H -I. -I. -I.. -I../zlib -I../include -I../include -I.    -O -DDBUG_OFF -ma -O2 -qstrict -qoptimize=2 -qmaxmem=8192   -c mulalloc.c
02841: "/usr/include/alloca.h", line 34.1: 1506-224 (I) Incorrect pragma ignored.
02842: source='my_alloc.c' object='my_alloc.o' libtool=no \
02843: depfile='.deps/my_alloc.Po' tmpdepfile='.deps/my_alloc.TPo' \
02844: depmode=aix /bin/sh ../depcomp \
02845: xlc_r -DDEFAULT_BASEDIR=\"/usr/local/mysql\" -DDATADIR="\"/usr/local/mysql/data\"" -DDEFAULT_CHARSET_HOME="\"/usr/local/mysql\"" -DSHAREDIR="\"/usr/local/mysql/share/mysql\"" -DDEFAULT_HOME_ENV=MYSQL_HOME -DDEFAULT_GROUP_SUFFIX_ENV=MYSQL_GROUP_SUFFIX -DHAVE_CONFIG_H -I. -I. -I.. -I../zlib -I../include -I../include -I.    -O -DDBUG_OFF -ma -O2 -qstrict -qoptimize=2 -qmaxmem=8192   -c my_alloc.c
02846: "/usr/include/alloca.h", line 34.1: 1506-224 (I) Incorrect pragma ignored.
02847: "my_alloc.c", line 227.9: 1506-213 (S) Macro name TRASH cannot be redefined.
02848: "my_alloc.c", line 227.9: 1506-358 (I) "TRASH" is defined on line 166 of ../include/my_sys.h.
02849: "my_alloc.c", line 242.15: 1506-041 (E) The invocation of macro TRASH contains fewer arguments than required by the macro definition.
02850: "my_alloc.c", line 252.15: 1506-041 (E) The invocation of macro TRASH contains fewer arguments than required by the macro definition.
02851: "my_alloc.c", line 313.26: 1506-041 (E) The invocation of macro TRASH contains fewer arguments than required by the macro definition.
02852: gmake[2]: *** [my_alloc.o] Error 1
02853: gmake[2]: Leaving directory `/home/mysqldev/aix52/mysql-5.0.13-beta-yassl/mysys'
02854: gmake[1]: *** [all-recursive] Error 1
02855: gmake[1]: Leaving directory `/home/mysqldev/aix52/mysql-5.0.13-beta-yassl'
02856: gmake: *** [all] Error 2
02857: 
02858: error: Couldn't execute command, error: 2
02859: 2005-09-04 22:59:58  ABORT compile + link

How to repeat:
Build on aix52
[5 Sep 2005 10:09] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/29311