BUG#12983 TRASH macro confliciting with TRASH in my_sys.h

mysys/my_alloc.c:
  Rename TRASH to TRASH_MEM and use the TRASH macro from my_sys.h